--- a/src/pages/sok/sok.njk
+++ b/src/pages/sok/sok.njk
@@ -1,7 +1,7 @@
 ---
 title: 'Søk på nav.no'
 type: 'Søkeresultat'
-description: 'Resultatside'
+category: 'Søkeside'
 order: 12
 permalink: '/sok/'
 alpine: true
