--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -11,29 +11,29 @@ alpine: true
 
 {%- block content -%}
   <main class="" x-bind:inert="menuOpen || myPageOpen">
-    <div class="grid pt-8 pb-16 grid-cols-combi ">
+    <div class="grid pt-8 pb-8 grid-cols-combi ">
       <div class="col-container">
-        <h2 class="text-2xl font-bold text-brand-purple-deep">Hva kan vi hjelpe deg med?</h2>
-        <ul class="grid gap-3 mt-4 lg:text-xl sm:grid-cols-2 xl:grid-cols-3">
+        <h2 class="text-2xl font-semibold">Hva kan vi hjelpe deg med?</h2>
+        <ul class="grid gap-2 mt-4 sm:gap-4 lg:text-xl sm:grid-cols-2 xl:grid-cols-3 xl:gap-6">
           {%- for area in areaList -%}
-            <li class="relative grid items-center break-inside-avoid pl-5 sm:pl-8 pr-28 sm:pr-36 py-3 rounded-lg min-h-16 sm:min-h-24 xl:min-h-32 transition shadow text-blue-600 bg-blue-50 has-[a:hover]:bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 has-[a:hover]:shadow-none hover:ring-2 hover:ring-blue-600">
+            <li class="relative grid items-center overflow-clip break-inside-avoid pl-5 sm:pl-8 pr-28 sm:pr-36 py-3 rounded-lg min-h-20 sm:min-h-24 xl:min-h-32 transition underline hover:text-blue-600 hover:decoration-2 bg-deepblue-50 has-[a:hover]:bg-slate-100 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 c-area-card">
               <a class="leading-snug focus-visible:outline-none after:absolute after:inset-0 text-balance hover:decoration-2" href="{{ area.href or '#'}}">
                 <span>{{ area.title | safe }}</span>
               </a>
-              {{ area.icon | svgContents("z-10 right-4 pt-4 sm:pt-8 max-h-full h-auto w-auto self-stretch absolute bottom-0 pointer-events-none") | safe if area.icon }}
+              {{ area.icon | svgContents("z-10 right-0 max-h-full h-full w-auto self-stretch absolute bottom-0 pointer-events-none") | safe if area.icon }}
             </li>
           {%- endfor -%}
         </ul>
       </div>
     </div>
 
-    <div class="grid pt-10 pb-8 grid-cols-combi bg-brand-beige">
+    <div class="grid pt-8 pb-8 grid-cols-combi">
       <div class="col-container">
-        <h2 class="text-2xl font-bold text-brand-purple-deep">Snarveier</h2>
-        <ul class="mt-3 mb-4 text-lg sm:gap-8 sm:columns-2">
+        <h2 class="text-2xl font-semibold">Snarveier</h2>
+        <ul class="mt-3 text-lg sm:gap-8 sm:columns-2">
           {%- for shortcut in shortcutsList -%}
-            <li class="block -my-px border-y border-[#D9C9BF]">
-              <a class="relative flex items-center justify-start gap-2 px-2 py-3 text-blue-600 focus-visible:bg-brand-beige focus-visible:z-10 focus-visible:rounded focus-visible:outline-none hover:underline hover:decoration-2 focus-visible:ring-2 focus-visible:ring-blue-600 focus-visible:ring-offset-2 focus-visible:ring-offset-brand-beige" href="#">
+            <li class="block -my-px border-y border-slate-300">
+              <a class="relative flex items-center justify-start gap-2 px-2 py-3 text-blue-600 focus-visible:bg-white focus-visible:z-10 focus-visible:rounded focus-visible:outline-none hover:underline hover:decoration-2 focus-visible:ring-2 focus-visible:ring-blue-600 focus-visible:ring-offset-2 focus-visible:ring-offset-white" href="#">
                 {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents("w-6 h-6") | safe if shortcut.icon }}
                 <span>{{ shortcut.title | safe }}</span>
               </a>
@@ -44,12 +44,12 @@ alpine: true
       </div>
     </div>
 
-    <div class="grid pt-12 pb-16 bg-white grid-cols-combi">
+    <div class="grid pt-8 pb-12 bg-white grid-cols-combi">
       <div class="col-container">
-        <h2 class="text-2xl font-bold text-brand-purple-deep">Aktuelt</h2>
+        <h2 class="text-2xl font-semibold ">Aktuelt</h2>
         <div class="grid gap-3 mt-3 sm:grid-cols-2 sm:gap-8">
           {%- for news in newsList -%}
-          <article class="relative grid pl-5 pr-16 py-5 rounded-lg bg-white ring-1 ring-slate-300 has-[a:hover]:bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 content-between hover:ring-2 hover:ring-blue-600">
+          <article class="relative grid pl-5 pr-16 py-5 rounded-lg bg-slate-100 has-[a:hover]:bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 content-between hover:ring-2 hover:ring-blue-600">
             <h3 class="mb-auto text-lg leading-snug">
               <a class="text-blue-600 after:z-10 after:absolute after:inset-0 focus-visible:outline-none" href="#">{{ news.title | safe }}</a>
             </h3>
@@ -67,9 +67,9 @@ alpine: true
       </div>
     </div>
 
-    <div class="grid pt-12 pb-20 -mt-3 bg-slate-100 grid-cols-combi wave">
+    <div class="grid pt-10 pb-20 bg-slate-100 grid-cols-combi ">
       <div class="col-container">
-        <h2 class="text-2xl font-bold text-brand-purple-deep">Kontakt oss</h2>
+        <h2 class="text-2xl font-semibold ">Kontakt oss</h2>
         <div class="grid gap-8 mt-4 sm:grid-cols-2">
           <div class="relative px-5 py-3.5 rounded-bl-none focus-within:rounded-bl-lg rounded-lg bg-white has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 group has-[a:hover]:drop-shadow">
             <h3 class="text-lg ">
@@ -89,6 +89,83 @@ alpine: true
         </div>
       </div>
     </div>
-
   </main>
 {%- endblock -%}
+
+
+{% block styles %}
+  <style>
+    @media (prefers-reduced-motion: no-preference) and (pointer:fine) {
+      .c-area-card,
+      .c-area-card :where(svg) * {
+        transition-property: transform, background-color, color, border-color, fill;
+        transition-duration: 130ms;
+        transition-timing-function: cubic-bezier(.4,0,1,1);
+      }
+      .c-area-card:where(:hover, :focus) :where(svg) * {
+        transition-duration: 260ms;
+        transition-timing-function: cubic-bezier(0,0,.2,1);
+      }
+    }
+
+    @media (pointer:fine) {
+      .c-area-card__letter-diagonal {
+        transform: translate3d(-97%, 0, 0) rotate(-10deg) scale(3.1);
+        transform-origin: left;
+        fill: #CCE2F0;
+      }
+
+      .c-area-card__letter-upright {
+        transform: translate3d(-129%, 0, 0) rotate(10deg) scale(4);
+        transform-origin: left;
+        fill: #CCE2F0;
+      }
+
+      .c-area-card__letter-cover {
+        transform: translate3d(-264%, 0, 0) rotate(10deg) scale(3.1);
+        transform-origin: left;
+        fill: #CCE2F0;
+      }
+
+      :where(.c-area-card__letter-group) {
+        transform: translate3d(10%, 0, 0);
+      }
+      :where(.c-area-card__briefcase) {
+        transform: translate3d(22%, -25%, 0);
+      }
+      :where(.c-area-card__stroller) {
+        transform: translate3d(21%, -21%, 0);
+      }
+      :where(.c-area-card__stethoscope) {
+        transform: translate3d(12%, -18%, 0);
+      }
+      :where(.c-area-card__piggybank) {
+        transform: translate3d(18%, -26%, 0);
+      }
+      :where(.c-area-card__guide-dog) {
+        transform: translate3d(12%, -24%, 0);
+      }
+      :where(.c-area-card__hand) {
+        transform: translate3d(10%, -18%, 0);
+      }
+      :where(.c-area-card__heart) {
+        transform: translate3d(22%, -22%, 0) scale(0.8);
+      }
+
+      :where(.c-area-card__shapes, .c-area-card__pill, .c-area-card__house, .c-area-card__compass, .c-area-card__chart, .c-area-card__arrow) {
+        transform: translate3d(58%, 0, 0);
+      }
+
+      :where(.c-area-card__coin) {
+        transform: translate3d(-10%, -50%, 0);
+      }
+
+      .c-area-card:where(:hover, :focus) :where(.c-area-card__letter-diagonal, .c-area-card__letter-upright) {
+        fill: #ffb8b8;
+      }
+      .c-area-card:where(:hover, :focus) :where(svg) * {
+        transform: translate3d(0, 0, 0) rotate(0deg) scale(1);
+      }
+    }
+  </style>  
+{% endblock %}
