--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -12,8 +12,7 @@ contactTheme: white
     <div class="grid grid-cols-combi">
       <div class="relative flex items-end justify-between col-container">
         <div class="flex-1 pt-8 pb-6">
-          {# <div class="tracking-wider text-gray-700 small-caps">{{ category | safe }}</div> #}
-          <h1 class="font-extrabold tracking-tight text-4xl/tight text-pretty text-brand-purple-deep">
+          <h1 class="font-semibold text-4xl/tight text-pretty">
             {{ title | safe }}
           </h1>
           <h2 class="col-span-2 col-start-1 text-lg text-pretty xs:col-start-1 xs:col-span-1 max-w-prose ">Hva er situasjonen din?</h2>
@@ -22,7 +21,7 @@ contactTheme: white
       </div>
     </div>
 
-    <div class="grid pt-10 pb-12 grid-cols-combi bg-brand-beige">
+    <div class="grid pt-10 pb-12 grid-cols-combi bg-slate-100">
 
       <div class="mb-10">
         <p class="text-base leading-snug text-center">
@@ -33,7 +32,7 @@ contactTheme: white
 
       <ul class="col-container columns-[42ch] gap-x-12">
         {%- for item in situationList -%}
-          <li class="relative flex items-start gap-2 px-2 pt-4 pb-3 -mt-px border-t border-b text-pretty bg-brand-beige border-slate-300/75">
+          <li class="relative flex items-start gap-2 px-2 pt-4 pb-3 -mt-px border-t border-b text-pretty bg-slate-100 border-slate-300/75 break-inside-avoid">
             {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('w-6 h-6 translate-y-1 shrink-0 text-blue-500') | safe }}
             <div class="grid gap-0.5">
               <h3><a class="font-normal text-blue-600 text-lg/normal hover:text-blue-600 hover:underline hover:decoration-2 after:absolute after:inset-0" href="#">
