--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -32,22 +32,20 @@
       {# Menu Buttons #}
       {%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-2 pr-3 leading-none font-semibold gap-1 text-blue-600 rounded min-w-16 py-2 text-sm xs:text-base fine:hover:bg-blue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
 
-      {# x-show="!loggedIn" x-on:click="loginOpen = !loginOpen, menuOpen = false" x-bind:aria-expanded="loginOpen" #}
-
       <div class="flex self-center py-2 -mr-1 sm:gap-1 justify-self-end">
-        <button class="{{ menuButtonClasses }}">
+        <button class="{{ menuButtonClasses }}" type="button" x-show="!loggedIn" x-on:click="loginOpen = !loginOpen, menuOpen = false, myPageOpen = false" x-bind:aria-expanded="loginOpen">
             {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
           <span class="mt-px">Logg inn</span>
         </button>
 
-        {# <button class="{{ menuButtonClasses }}" x-on:click="myPageOpen = !myPageOpen, menuOpen = false" x-bind:class="myPageOpen && 'bg-slate-200'" x-show="loggedIn" x-bind:aria-expanded="myPageOpen" x-bind:hidden="!myPageOpen" hidden>
+        <button class="{{ menuButtonClasses }}" type="button" x-on:click="myPageOpen = !myPageOpen, menuOpen = false, loginOpen = false" x-bind:class="myPageOpen && 'bg-slate-200'" x-show="loggedIn" x-bind:aria-expanded="myPageOpen" x-bind:hidden="!myPageOpen" hidden>
           <span class="relative">
             {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 -ml-0.5 shrink-0 pointer-events-none') | safe }}
             <span x-show="newNotifications" class="absolute right-0 block w-1.5 h-1.5 sm:w-2 sm:h-2 bg-red-400 rounded-full top-0.5" x-bind:class="myPageOpen ? 'ring-2 ring-slate-200' : 'ring-2 ring-white fine:group-hover:ring-slate-200'"></span>
           </span>
           <span class="mt-px sm:hidden">Min side</span>
           <span class="hidden mt-px sm:inline-block">Isac Norland</span>
-        </button> #}
+        </button>
 
         <button class="{{ menuButtonClasses }} ml-1 order-2" type="button" x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false" x-bind:class="menuOpen && 'bg-blue-50'" x-bind:aria-expanded="menuOpen">
           <template x-if="!menuOpen">
@@ -63,21 +61,19 @@
     </div>
   </nav>
   {%- include "partials/navigation.njk" -%}
-  {# {%- include "partials/login.njk" -%}
-  {%- include "partials/minSide.njk" -%} #}
+  {%- include "partials/login.njk" -%}
+  {%- include "partials/minSide.njk" -%}
 </header>
 
 {# Overlay #}
 <button 
   class="fixed inset-0 z-40 w-full h-full cursor-default bg-deepblue-900/50 backdrop-blur-sm" 
+  type="button"
   x-show="(menuOpen || myPageOpen || loginOpen)" 
   x-on:click="menuOpen = false, myPageOpen = false, loginOpen = false" 
   x-on:keyup.escape.window="menuOpen = false, myPageOpen = false,  loginOpen = false"
   x-transition:enter="transition ease-out duration-75"
   x-transition:enter-start="opacity-0"
   x-transition:enter-end="opacity-100"
-  x-bind:hidden="!menuOpen"
-  x-bind:hidden="!myPageOpen"
-  x-bind:hidden="!loginOpen"
-  hidden
-  ></button>
+  x-bind:hidden="!overlayOpen"
+  hidden></button>
