--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -5,7 +5,7 @@
     </div>
     <div class="max-w-[50ch] text-balance">
       <p><span class="mr-1 font-bold">Hei!</span> Dette er en en prototype til testing og utvikling.
-      <a class="text-blue-600 underline fine:hover:decoration-2 fine:hover:text-blue-600" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
+      <a class="text-blue-600 underline pointer-fine:hover:decoration-2 pointer-fine:hover:text-blue-600" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
     </div>
   </div>
 </aside>
