--- a/_excluded/soknad/aap/aap-soknad.njk
+++ b/_excluded/soknad/aap/aap-soknad.njk
@@ -69,9 +69,9 @@
 
             {# Stepper #}
             <div class="mb-10 md:col-start-1">
-              <div class="relative py-2 rounded-sm fine:hover:bg-deepblue-50">
+              <div class="relative py-2 rounded-sm pointer-fine:hover:bg-deepblue-50">
                 <h2 class="text-2xl font-semibold">{{ stepTitle | safe }}</h2>
-                <button class="absolute inset-0 flex items-start justify-end pr-0.5 pt-3.5 fine:hover:text-blue-800 rounded-sm fine:hover:ring-12 fine:hover:ring-deepblue-50" x-on:click="stepperOpen = !stepperOpen">
+                <button class="absolute inset-0 flex items-start justify-end pr-0.5 pt-3.5 pointer-fine:hover:text-blue-800 rounded-sm pointer-fine:hover:ring-12 pointer-fine:hover:ring-deepblue-50" x-on:click="stepperOpen = !stepperOpen">
                   <span class="sr-only">Vis seksjoner</span>
                   <svg class="flex-none w-6 h-6 -translate-y-px pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
                     <path d="M18 9L12 15L6 9" stroke="currentColor" stroke-width="2" opacity="0.8" />
@@ -105,17 +105,17 @@
           <div class="max-w-sm mt-12">
             <div class="grid gap-2 xs:grid-cols-2">
               {% if (pagination.pageNumber > 1) %}
-                <a href="/soknad/aap/{{ pagination.page.previous.title | slugify }}/" class="inline-block px-8 py-3 font-semibold leading-snug text-center text-blue-500 bg-white rounded fine:hover:bg-blue-50 ring-2 ring-inset ring-blue-500" type="button">Forrige steg</a>
+                <a href="/soknad/aap/{{ pagination.page.previous.title | slugify }}/" class="inline-block px-8 py-3 font-semibold leading-snug text-center text-blue-500 bg-white rounded pointer-fine:hover:bg-blue-50 ring-2 ring-inset ring-blue-500" type="button">Forrige steg</a>
               {% endif %}
 
               {% if pagination.pageNumber < (formSteps.length - 2) %}
-                <a href="/soknad/aap/{{ pagination.page.next.title | slugify }}/" class="inline-block px-8 py-3 font-semibold leading-snug text-center text-white bg-blue-500 rounded fine:hover:bg-blue-600" type="button">Neste steg</a>
+                <a href="/soknad/aap/{{ pagination.page.next.title | slugify }}/" class="inline-block px-8 py-3 font-semibold leading-snug text-center text-white bg-blue-500 rounded pointer-fine:hover:bg-blue-600" type="button">Neste steg</a>
               {% endif %}
 
             </div>
             <div class="grid gap-2 pt-4 mt-6 border-t border-gray-200 xs:grid-cols-2">
               {% if pagination.page.previous %}
-                <a class="inline-block px-8 py-3 font-semibold leading-snug text-center rounded bg-gray-50 fine:hover:bg-blue-50" href="/soknad/aap/">Avslutt</a>
+                <a class="inline-block px-8 py-3 font-semibold leading-snug text-center rounded bg-gray-50 pointer-fine:hover:bg-blue-50" href="/soknad/aap/">Avslutt</a>
               {% endif %}
             </div>
           </div>
