--- a/_excluded/soknad/dagpenger/dagpenger-soknad.njk
+++ b/_excluded/soknad/dagpenger/dagpenger-soknad.njk
@@ -77,7 +77,7 @@
             <div class="mb-10 rounded-lg max-w-prose md:col-start-1 md:hidden">
             <div class="relative px-3 py-2 rounded-md bg-deepblue-50">
               <h2 class="text-2xl font-semibold">{{ stepTitle | safe }}</h2>
-              <button class="absolute inset-0 flex items-start justify-end pl-3 pr-4 pt-3.5 text-blue-600 fine:hover:text-blue-800 rounded-md ring-2 ring-deepblue-50 fine:hover:ring-blue-500" x-on:click="stepperOpen = !stepperOpen">
+              <button class="absolute inset-0 flex items-start justify-end pl-3 pr-4 pt-3.5 text-blue-600 pointer-fine:hover:text-blue-800 rounded-md ring-2 ring-deepblue-50 pointer-fine:hover:ring-blue-500" x-on:click="stepperOpen = !stepperOpen">
                 <span class="sr-only">Vis seksjoner</span>
                 <svg class="flex-none w-6 h-6 -translate-y-px pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
                   <path d="M18 9L12 15L6 9" stroke="currentColor" stroke-width="2" opacity="0.8" />
@@ -126,15 +126,15 @@
             {# Navigation #}
             <div class="grid gap-2 mt-12">
               {% if pagination.pageNumber < (formSteps.length - 2) %}
-                <a href="/soknad/dagpenger/{{ pagination.page.next.title | slugify }}/" class="px-4 py-3 font-semibold leading-snug text-center text-white bg-blue-500 rounded fine:hover:bg-blue-600" type="button">Neste</a>
+                <a href="/soknad/dagpenger/{{ pagination.page.next.title | slugify }}/" class="px-4 py-3 font-semibold leading-snug text-center text-white bg-blue-500 rounded pointer-fine:hover:bg-blue-600" type="button">Neste</a>
               {% endif %}
 
               {% if (pagination.pageNumber > 1) %}
-                <a href="/soknad/dagpenger/{{ pagination.page.previous.title | slugify }}/" class="px-4 py-3 font-semibold leading-snug text-center text-blue-500 bg-white rounded fine:hover:bg-blue-50 ring-2 ring-inset ring-blue-500" type="button">Forrige</a>
+                <a href="/soknad/dagpenger/{{ pagination.page.previous.title | slugify }}/" class="px-4 py-3 font-semibold leading-snug text-center text-blue-500 bg-white rounded pointer-fine:hover:bg-blue-50 ring-2 ring-inset ring-blue-500" type="button">Forrige</a>
               {% endif %}
 
               {% if pagination.page.previous %}
-                <a class="px-4 py-3 font-semibold leading-snug text-center rounded fine:hover:bg-blue-50" href="/soknad/dagpenger/">Avbryt …</a>
+                <a class="px-4 py-3 font-semibold leading-snug text-center rounded pointer-fine:hover:bg-blue-50" href="/soknad/dagpenger/">Avbryt …</a>
               {% endif %}
             </div>
           </div>
