--- a/src/_includes/macros/microcard.njk
+++ b/src/_includes/macros/microcard.njk
@@ -1,6 +1,6 @@
 {%- macro microcard(params) -%}
 
-  {%- set microcardClasses = "bg-white ring-1 ring-gray-300 fine:hover:ring-gray-500 text-sm fine:hover:shadow" -%}
+  {%- set microcardClasses = "bg-white ring-1 ring-gray-300 pointer-fine:hover:ring-gray-500 text-sm pointer-fine:hover:shadow" -%}
 
   <a href="{{ params.href or '#' }}" class="inline-flex items-center gap-2 pl-2.5 pr-3.5 py-1.5 shadow-sm text-base no-underline rounded-full leading-tight text-left {{ params.class }} {{ microcardClasses }}">
     <span class="{{ params.dot | safe or 'bg-gray-400/50' }} w-2 h-2 rounded-full"></span>
