--- a/src/_includes/partials/minSide.njk
+++ b/src/_includes/partials/minSide.njk
@@ -6,14 +6,14 @@
       <span class="text-xl font-semibold">Isac Norland</span>
     </p>
     <p>
-      <a href="#" class="flex items-center gap-2 py-3 -mt-px text-blue-600 px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+      <a href="#" class="flex items-center gap-2 py-3 -mt-px text-blue-600 px-edge sm:px-6 pointer-fine:hover:bg-blue-500 pointer-fine:hover:text-white">
         {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents() | safe }}
         <span>Min side</span>
       </a>
     </p>
     <div class="h-px mx-6 bg-slate-200"></div>
     <p>
-      <a href="#" class="flex items-center gap-2 py-3 -mt-px text-blue-600 px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white">
+      <a href="#" class="flex items-center gap-2 py-3 -mt-px text-blue-600 px-edge sm:px-6 pointer-fine:hover:bg-blue-500 pointer-fine:hover:text-white">
         {{ '/src/_includes/svg/icons/id-badge.svg' | svgContents() | safe }}
         <span>Personopplysninger</span>
       </a>
@@ -25,7 +25,7 @@
         <div class="grid gap-1 mt-2">
           {%- for item in minSide.notifications -%}
           {%- if loop.index < 5 %}           
-            <div class="grid grid-cols-[auto_1fr] gap-3 px-3 py-4 bg-white rounded-xl shadow-sm fine:hover:ring-2 fine:hover:ring-blue-600 relative group">
+            <div class="grid grid-cols-[auto_1fr] gap-3 px-3 py-4 bg-white rounded-xl shadow-sm pointer-fine:hover:ring-2 pointer-fine:hover:ring-blue-600 relative group">
               <span class="grid self-start p-2 rounded-lg bg-slate-100 place-items-center">
               {{ '/src/_includes/svg/icons/tasks.svg' | svgContents('w-5 h-5') | safe }}
               </span>
@@ -51,7 +51,7 @@
     </div>
     <div class="grid">
       <div x-show="!newNotifications" class="border-t border-slate-200 mx-clamp-gap sm:mx-6"></div>
-      <button class="flex items-center gap-2 py-3 text-blue-600 rounded-b-lg px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white" x-on:click="loggedIn = false, myPageOpen = false">
+      <button class="flex items-center gap-2 py-3 text-blue-600 rounded-b-lg px-edge sm:px-6 pointer-fine:hover:bg-blue-500 pointer-fine:hover:text-white" x-on:click="loggedIn = false, myPageOpen = false">
         {{ '/src/_includes/svg/icons/logout.svg' | svgContents('-translate-y-px') | safe }}
         <span>Logg ut</span>
       </button>
